Attributbinding für Objektreferenz und Ganzzahl als Aufzählung
Die ersten beiden Attributtypen können auf Properties abgebildet
werden: Objektreferenz auf SystemObject und Ganzzahl als Aufzählung auf
enum.

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
 
     <groupId>de.bsvrz.sys</groupId>
     <artifactId>de.bsvrz.sys.funclib.datenkatalog</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
-    <description>Die Funktionsbibliothek Datenkatalog soll die Arbeit mit dem Datenkatalog der
-        BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.</description>
+    <description>
+        Die Funktionsbibliothek Datenkatalog soll die Arbeit mit dem Datenkatalog der BSVRZ-Software vereinfachen und
+        zusätzliche Werkzeuge dafür anbieten.
+    </description>
 
     <dependencies>
         <dependency>
@@ -37,10 +39,14 @@
     </dependencies>
 
     <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
-    <organization>
-        <name>NERZ e.V.</name>
-        <url>http://www.nerz-ev.de</url>
-    </organization>
+
+    <developers>
+        <developer>
+            <id>falkoschumann</id>
+            <name>Falko Schumann</name>
+            <email>falko.schumann@muspellheim.de</email>
+        </developer>
+    </developers>
 
     <licenses>
         <license>
@@ -52,7 +58,8 @@
     <scm>
         <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
         <connection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git</connection>
-        <developerConnection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git
+        </developerConnection>
     </scm>
 
     <distributionManagement>
@@ -91,9 +98,8 @@
     </repositories>
 
     <properties>
-        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
-        <project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <source.version>8</source.version>
         <github.global.server>github</github.global.server>
     </properties>
@@ -194,9 +200,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
