--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         Die Funktionsbibliothek Datenkatalog soll die Arbeit mit dem Datenkatalog der BSVRZ-Software vereinfachen und
         zusätzliche Werkzeuge dafür anbieten.
     </description>
+    <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
+    <inceptionYear>2015</inceptionYear>
 
     <dependencies>
         <dependency>
@@ -38,8 +40,6 @@
         </dependency>
     </dependencies>
 
-    <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
-
     <developers>
         <developer>
             <id>falkoschumann</id>
@@ -56,10 +56,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
         <connection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git</connection>
-        <developerConnection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git
-        </developerConnection>
+        <developerConnection>scm:git:https://github.com/falkoschumann/datenverteiler-datenkatalog.git</developerConnection>
+        <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
     </scm>
 
     <distributionManagement>
@@ -220,6 +219,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.18.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
