--- a/pom.xml
+++ b/pom.xml
@@ -180,8 +180,6 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>verify</id>
-                        <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -193,13 +191,12 @@
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <effort>Max</effort>
-                    <threshold>Low</threshold>
+                    <effort>Min</effort>
+                    <threshold>High</threshold>
+                    <includeTests>true</includeTests>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>verify</id>
-                        <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -258,37 +255,11 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.15</version>
                 <configuration>
                     <configLocation>src/main/config/checkstyle.xml</configLocation>
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <skipEmptyReport>false</skipEmptyReport>
-                    <includeTests>true</includeTests>
-                    <rulesets>
-                        <ruleset>/rulesets/java/basic.xml</ruleset>
-                        <ruleset>/rulesets/java/clone.xml</ruleset>
-                        <ruleset>/rulesets/java/codesize.xml</ruleset>
-                        <ruleset>/rulesets/java/empty.xml</ruleset>
-                        <ruleset>/rulesets/java/finalizers.xml</ruleset>
-                        <ruleset>/rulesets/java/imports.xml</ruleset>
-                        <ruleset>/rulesets/java/logging-java.xml</ruleset>
-                        <ruleset>/rulesets/java/migrating.xml</ruleset>
-                        <ruleset>/rulesets/java/unnecessary.xml</ruleset>
-                        <ruleset>/rulesets/java/unusedcode.xml</ruleset>
-                    </rulesets>
                 </configuration>
             </plugin>
             <plugin>
@@ -298,7 +269,13 @@
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
+                    <includeTests>true</includeTests>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -309,7 +286,7 @@
                     <tagListOptions>
                         <tagClasses>
                             <tagClass>
-                                <displayName>Problem</displayName>
+                                <displayName>Ungelöste Probleme</displayName>
                                 <tags>
                                     <tag>
                                         <matchString>FIXME</matchString>
@@ -318,19 +295,10 @@
                                 </tags>
                             </tagClass>
                             <tagClass>
-                                <displayName>Offener Punkt</displayName>
+                                <displayName>Offene Punkte</displayName>
                                 <tags>
                                     <tag>
                                         <matchString>TODO</matchString>
-                                        <matchType>ignoreCase</matchType>
-                                    </tag>
-                                </tags>
-                            </tagClass>
-                            <tagClass>
-                                <displayName>Anmerkung</displayName>
-                                <tags>
-                                    <tag>
-                                        <matchString>XXX</matchString>
                                         <matchType>ignoreCase</matchType>
                                     </tag>
                                 </tags>
