--- a/pom.xml
+++ b/pom.xml
@@ -135,10 +135,8 @@
                 <version>2.4</version>
                 <executions>
                     <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
                         <goals>
-                            <goal>jar-no-fork</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -149,8 +147,6 @@
                 <version>2.10.1</version>
                 <executions>
                     <execution>
-                        <id>attach-javadoc</id>
-                        <phase>verify</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
