--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
             <name>GitHub Pages</name>
             <url>http://falkoschumann.github.io/datenverteiler-datenkatalog/</url>
         </site>
+        <downloadUrl>https://github.com/falkoschumann/datenverteiler-datenkatalog/releases</downloadUrl>
     </distributionManagement>
 
     <issueManagement>
@@ -125,6 +126,28 @@
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-maven-plugin</artifactId>
+                <version>2.4.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>bnd-process</goal>
                         </goals>
                     </execution>
                 </executions>
