Basis-Assembly für Distributionspaket angelegt
Es wird das JAR-File mit den Class-Files, das API-ZIP, das Source-ZIP,
die Lizenz und der Build Report zusammengepackt.

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,8 @@
     </repositories>
 
     <properties>
+        <project.status>BETA</project.status>
+        <project.stand>2015-04-19</project.stand>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <source.version>8</source.version>
@@ -214,6 +216,26 @@
                     <execution>
                         <goals>
                             <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <finalName>SWE_${project.artifactId}-${project.status}-V${project.version}-D${project.stand}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>src/main/assembly/swe.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
