--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
-        Die Funktionsbibliothek Datenkatalog soll die Arbeit mit dem Datenkatalog der BSVRZ-Software vereinfachen und
-        zusätzliche Werkzeuge dafür anbieten.
+Die Funktionsbibliothek Datenkatalog soll die Arbeit mit dem Datenkatalog der
+BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
     </description>
     <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
     <inceptionYear>2015</inceptionYear>
@@ -136,11 +136,52 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.5</version>
-                <configuration>
-                    <archive>
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <configuration>
+                            <archive>
+                                <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                            </archive>
+                        </configuration>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>runtime-jar</id>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/*</exclude>
+                            </excludes>
+                            <jarName>${project.build.finalName}-runtime</jarName>
+                            <archive>
+                                <manifest>
+                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                                    <addClasspath>true</addClasspath>
+                                    <classpathLayoutType>custom</classpathLayoutType>
+                                    <customClasspathLayout>../$${artifact.artifactId}/$${artifact.artifactId}-runtime.jar</customClasspathLayout>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-jar</id>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
@@ -162,6 +203,7 @@
                     <execution>
                         <goals>
                             <goal>jar</goal>
+                            <goal>test-jar</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -174,6 +216,7 @@
                     <execution>
                         <goals>
                             <goal>jar</goal>
+                            <goal>test-jar</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -182,6 +225,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
                 <version>2.11</version>
+                <configuration>
+                    <template>announcement.vm</template>
+                    <templateDirectory>announcements</templateDirectory>
+                    <announcementFile>CHANGES.md</announcementFile>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -231,6 +279,16 @@
                         <descriptor>src/main/assembly/swe.xml</descriptor>
                     </descriptors>
                 </configuration>
+<!--
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+-->
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
