--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.bsvrz.sys</groupId>
     <artifactId>de.bsvrz.sys.funclib.datenkatalog</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
@@ -20,6 +20,15 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
     </description>
     <url>https://github.com/falkoschumann/datenverteiler-datenkatalog</url>
     <inceptionYear>2015</inceptionYear>
+
+    <properties>
+        <project.status>BETA</project.status>
+        <project.stand>2015-06-24</project.stand>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <source.version>8</source.version>
+        <github.global.server>github</github.global.server>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -97,15 +106,6 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
             <url>http://falkoschumann.github.io/maven-repository/releases/</url>
         </repository>
     </repositories>
-
-    <properties>
-        <project.status>BETA</project.status>
-        <project.stand>2015-04-19</project.stand>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <source.version>8</source.version>
-        <github.global.server>github</github.global.server>
-    </properties>
 
     <build>
         <plugins>
