--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <developers>
