--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.bsvrz.sys</groupId>
     <artifactId>de.bsvrz.sys.funclib.datenkatalog</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
@@ -23,7 +23,7 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
 
     <properties>
         <project.status>BETA</project.status>
-        <project.stand>2015-06-24</project.stand>
+        <project.stand>2015-06-25</project.stand>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <source.version>8</source.version>
