--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.bsvrz.sys</groupId>
     <artifactId>de.bsvrz.sys.funclib.datenkatalog</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2-SNAPSHOT</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
@@ -169,6 +169,7 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
                                     <customClasspathLayout>../$${artifact.artifactId}/$${artifact.artifactId}-runtime.jar</customClasspathLayout>
                                 </manifest>
                             </archive>
+                            <classifier>runtime</classifier>
                         </configuration>
                         <goals>
                             <goal>jar</goal>
