--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
             <version>3.6.2</version>
         </dependency>
         <dependency>
+            <groupId>de.muspellheim</groupId>
+            <artifactId>flowdesign</artifactId>
+            <version>3.0.0</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
