--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.bsvrz.sys</groupId>
     <artifactId>de.bsvrz.sys.funclib.datenkatalog</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
@@ -166,14 +166,16 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
                             <excludes>
                                 <exclude>**/*</exclude>
                             </excludes>
-                            <jarName>${project.build.finalName}</jarName>
                             <archive>
                                 <manifest>
                                     <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                     <addClasspath>true</addClasspath>
                                     <classpathLayoutType>custom</classpathLayoutType>
-                                    <customClasspathLayout>../$${artifact.artifactId}/$${artifact.artifactId}-runtime.jar</customClasspathLayout>
+                                    <customClasspathLayout>../${artifact.artifactId}/${artifact.artifactId}-runtime.${artifact.extension}</customClasspathLayout>
                                 </manifest>
+                                <manifestEntries>
+                                    <Class-Path>${project.artifactId}.jar lib/flowdesign-3.0.0.jar</Class-Path>
+                                </manifestEntries>
                             </archive>
                             <classifier>runtime</classifier>
                         </configuration>
@@ -289,7 +291,7 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
                     <finalName>SWE_${project.artifactId}_${project.status}_V${project.version}_D${maven.build.timestamp}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-                        <descriptor>src/main/assembly/swe.xml</descriptor>
+                        <descriptor>src/assembly/swe.xml</descriptor>
                     </descriptors>
                 </configuration>
             </plugin>
