--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,11 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jdepend-maven-plugin</artifactId>
+                <version>2.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
