--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.muspellheim</groupId>
     <artifactId>datenverteiler-datenkatalog</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
@@ -169,7 +169,7 @@ BSVRZ-Software vereinfachen und zusätzliche Werkzeuge dafür anbieten.
                                     <customClasspathLayout>../${artifact.artifactId}/${artifact.artifactId}-runtime.${artifact.extension}</customClasspathLayout>
                                 </manifest>
                                 <manifestEntries>
-                                    <Class-Path>${project.artifactId}.jar lib/flowdesign-3.0.0.jar</Class-Path>
+                                    <Class-Path>${project.artifactId}.jar</Class-Path>
                                 </manifestEntries>
                             </archive>
                             <classifier>runtime</classifier>
