--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.muspellheim</groupId>
     <artifactId>datenverteiler-datenkatalog</artifactId>
-    <version>3.0.3</version>
+    <version>3.1.0-SNAPSHOT</version>
 
     <name>Funktionsbibliothek Datenkatalog</name>
     <description>
